fixed linebreaks in code blocks

--- a/src/crate/theme/rtd/crate/static/css/theme.less
+++ b/src/crate/theme/rtd/crate/static/css/theme.less
@@ -92,6 +92,8 @@ a#crate-logo:hover {
 
 code, kbd, pre, samp, .pre {
     font-family: SourceCodePro, Menlo, Monaco, Consolas, "Courier New", monospace;
+    word-break: normal;
+    word-wrap: normal;
 }
 pre {
     border: 0px none;
